<resources>
    <string name="app_name">Ibnox</string>
    <string name="intro_screen2_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s.</string>
    <string name="intro_screen1_description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</string>
    <string name="intro_screen1_title">What is Lorem Ipsum?</string>
    <string name="intro_screen2_title">Why do we use it?</string>
    <string name="intro_screen3_title">Where does it come?</string>
    <string name="intro_screen3_desciption">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</string>
    <string name="profile_description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</string>
    <string name="start_now">START NOW</string>
    <string name="login_button">Log in</string>
    <string name="signup_button">Sign up</string>
    <string name="notification">notification</string>
    <string name="message">message</string>
    <string name="search">search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="privacy">privacy</string>
    <string name="terms">terms</string>
    <string name="help">help</string>
    <string name="credits">credits</string>
    <string name="copyright">\@copyright/Ibnox</string>
    <string name="facebook_app_id">275066682919755</string>

    <string-array name="drawer_item">
        <item>Home</item>
        <item>Subscribed</item>
        <item>Highlighted by you</item>
        <item>Question and Answer</item>
        <item>Setting</item>
        <item>Help</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
