<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_bell_outline_white_24dp"
        android:orderInCategory="100"
        android:title="@string/notification"
        app:showAsAction="always" />

    <item
        android:id="@+id/message_box"
        android:icon="@drawable/ic_comment_text_outline_white_24dp"
        android:orderInCategory="200"
        android:title="@string/message"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_magnify_white_24dp"
        android:orderInCategory="300"
        android:title="@string/search"
        app:showAsAction="always"
        />

</menu>