<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/footer_margin_top"
    android:background="@color/footer_button_background"
    >

    <View android:layout_width="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_height="1dp"
        android:id="@+id/margin_line"
        android:background="#CCC"/>
    <TextView
        android:id="@+id/footer_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38dp"
        android:layout_below="@+id/margin_line"
        android:background="@drawable/custom_bg"
        android:padding="5dp"
        android:clickable="true"
        android:text="@string/privacy" />

    <TextView
        android:id="@+id/footer_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_below="@+id/margin_line"
        android:background="@drawable/custom_bg"
        android:layout_toRightOf="@+id/footer_privacy"
        android:padding="5dp"
        android:clickable="true"
        android:text="@string/terms" />

    <TextView
        android:id="@+id/footer_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/margin_line"
        android:background="@drawable/custom_bg"
        android:layout_toRightOf="@id/footer_terms"
        android:padding="5dp"
        android:clickable="true"
        android:layout_marginLeft="19dp"
        android:text="@string/credits" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/footer_credits"
        android:layout_marginLeft="65dp"
        android:textStyle="bold"
        android:padding="8dp"
        android:text="@string/copyright"/>
</RelativeLayout>